# task_manager

./: Dockerfile  HACKATHON_PITCH.md  HACKATHON_QUICK_REF.md  PROJECT_ARCHITECTURE.md  README.md  SUBMIT_THIS.txt  app.py  create_submission.sh  environment.py  grader.py  inference.py  models.py  openenv.yaml  project_architecture.py  pyproject.toml  requirements.txt  run_agent.py  streamlit_app.py  tasks.py
scripts/: validate-submission.sh
server/: app.py
task_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
task_manager_submission_20260330_232307/: SUBMISSION.md  app.py  environment.py
